# subzero

./: .dockerignore  .env.example  .gitignore  ALL_TESTS_COMPLETE.md  API_ENDPOINTS.md  CHANGELOG.md  CI_STATUS_UPDATE.md  CLAUDE.md  COMPLETE_FEATURE_LIST.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEMO_QUICK_REFERENCE.md  DOCSTRING_CONVERSION_PROGRESS.md  DOCUMENTATION_COMPLIANCE_SUMMARY.md  DOCUMENTATION_PACK_COMPLETE.md  Dockerfile  ENHANCEMENTS_COMPLETED.md  EXECUTIVE_SUMMARY.md  FINAL_GAP_ANALYSIS.md  FINAL_GAP_COVERAGE_STATUS.md  FINAL_STATUS.md  GAPS_ADDRESSED.md  GAP_ANALYSIS.md  GAP_ANALYSIS_COMPLETED.md  HIGH_IMPACT_OPTIMIZATIONS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  METRICS_VALIDATION_SUMMARY.md  ORCHESTRATOR_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS_COMPLETED.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PERFORMANCE_TEST_FIX.md  PERFORMANCE_TEST_FIX_V2.md  PERFORMANCE_TEST_ISSUES.md  POST_RELEASE_STATUS.md  PRODUCTION_READINESS_REPORT.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  (+20 more)
.github/: FUNDING.yml
.github/workflows/: CICD_AUDIT_REPORT.md  CICD_ENHANCEMENT_SUMMARY.md  README.md  VALIDATION_SUMMARY.md  ci.yml
archive/: ARCHIVE_INDEX.md  DEVELOPMENT_HISTORY.md  DOCSTRING_REVIEW_REPORT.md  DOCUMENTATION_ANALYSIS_REPORT.md  FINAL_STATUS_REPORT.md  GAP_RESOLUTION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MULTIPROCESSING_IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  README.md  performance_tests_README_old.md
archive/scripts/development/: add_copyright_headers.py
config/: settings.py
docs/: ADVANCED_OPTIMIZATIONS.md  BENCHMARK_RESULTS.md  CPU_BOUND_ANALYSIS.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  MULTIPROCESSING_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  api.md  architecture.md  auth0_setup_guide.md  business_case.md  configuration.md  deployment.md  examples.md  performance.md  performance_results.md  troubleshooting.md
etc/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret-template.yaml  service.yaml  serviceaccount.yaml
examples/: resilient_auth_example.py
hackathon/: HACKATHON_PITCH_DECK.md  PROJECT_SUMMARY_AND_REPORT.md  README.md  TEST_REPORTS_AND_BENCHMARKS.md
hackathon/archive/: HACKATHON_GUIDE.md  HACKATHON_READINESS.md  PROJECT_STATUS.md
scripts/: README.md  add_copyright_headers.py  add_last_updated.py  test_fastapi_server.py  update_imports.py  verify_enterprise_features.py  verify_gaps_addressed.py  verify_integration.py  verify_new_structure.py
src/auth/: app_registry.py  auth0_integration.py  cuckoo_cache.py  distributed_cache.py  dynamic_client_registration.py  eddsa_key_manager.py  high_performance_auth.py  hybrid_processor.py  metadata_discovery.py  multiprocess_jwt.py  oauth2_pkce.py  parallel_hash.py  private_key_jwt.py  resilient_auth_service.py  simd_operations.py  token_pool.py  token_vault_integration.py  xaa_protocol.py
src/fga/: abac_engine.py  authorization_cache.py  authorization_engine.py  opa_integration.py  rebac_engine.py
src/integration/: unified_gateway.py
src/mcp/: ai_security_module.py  custom_transports.py  dynamic_capability_discovery.py
src/performance/: cpu_bound_multiprocessing.py  functional_event_orchestrator.py  multiprocess_monitor.py  orchestrator_monitoring.py  vectorized_operations.py
src/security/: advanced_threat_detection.py  audit_trail.py  demo_suite.py  graceful_degradation.py  health_monitor.py  ispm.py  owasp_llm_mitigations.py  rate_limiter.py
subzero/: __init__.py  __main__.py  _version.py  subzeroapp.py
subzero/api/: __init__.py  server.py  server_old.py
subzero/base/: __init__.py
subzero/client/: __init__.py
subzero/config/: __init__.py  defaults.py
subzero/orchestrator/: __init__.py  component_registry.py  integration.py
subzero/services/: __init__.py
subzero/services/auth/: __init__.py  actions.py  (+19 more)
subzero/utils/: __init__.py  logging.py  structured_logging.py
tests/: conftest.py
tests/integration/: test_critical_features.py  test_orchestrator_integration.py  test_unified_gateway.py
tests/performance/: README.md  performance_utils.py  test_auth_performance.py  test_config_performance.py  test_cpu_bound_multiprocessing.py  test_multiprocessing_performance.py  test_orchestrator_performance.py
tests/unit/: __init__.py  test_config.py
tests/validation/: README.md  test_advanced_optimizations.py  test_all_endpoints.py  test_high_impact_optimizations.py  test_load_performance.py  test_optimizations.py  test_verify_all_features.py  test_verify_enterprise_features.py  test_verify_gaps_addressed.py  test_verify_integration.py
zero_trust_ai_gateway/: README.md  __init__.py  __main__.py  _version.py  aigatewayapp.py  aigatewayapp_original.py  mixins.py  start.py
zero_trust_ai_gateway/base/: __init__.py  handlers.py
zero_trust_ai_gateway/core/: __init__.py  adapters.py  gateway.py
zero_trust_ai_gateway/services/: __init__.py
zero_trust_ai_gateway/tests/: __init__.py  test_performance.py  test_refactored_gateway.py
(+48 files in other folders)
